JOLICLOUD: broadcom: uuencode upstream shared objects
When building the kernel, the process that generates the source code
cannot create a diff from upstream if there are binaries added afterwards.
For now, uuencode the binaries so they can be represented in the diff.

This solution is hacky, and should be removed with something more elegant,
like 100% open-sourced drivers.

--- a/debian/rules
+++ b/debian/rules
@@ -46,6 +46,8 @@ clean: debian/control
 	rm -f $(stampdir)/stamp-*
 	rm -rf debian/linux-*
 
+	rm -f jolicloud/broadcom/lib/wlc_hybrid.o_shipped_{i386,x86_64}
+
 	# This gets rid of the d-i packages in control
 	cp -f debian/control.stub debian/control
 
