JOLICLOUD: broadcom: cleanly include uuencoded wlc_hybrid objs in kernel diff
The shipped binaries in the broadcom wifi driver were wrecking havoc on the
build process because they weren't in upstream and couldn't be represented
as a diff.

Borrowed the idea from Mozilla to uuencode the object binaries in the
source, then uudecode them at build-time.

--- a/jolicloud/broadcom/Makefile
+++ b/jolicloud/broadcom/Makefile
@@ -43,4 +43,14 @@ EXTRA_CFLAGS       :=
 EXTRA_CFLAGS       += -I$(src)/src/include
 EXTRA_CFLAGS       += -I$(src)/src/wl/sys
 
-EXTRA_LDFLAGS      := $(KBUILD_SRC)/$(src)/lib/wlc_hybrid.o_shipped_$(BINARCH)
+HYBRID_MODULE      := lib/wlc_hybrid_$(BINARCH).o
+HYBRID_MODULE_UU   := $(KBUILD_SRC)/$(obj)/$(HYBRID_MODULE).uu
+HYBRID_MODULE_OBJ  := $(O)/$(obj)/$(HYBRID_MODULE)
+
+EXTRA_LDFLAGS      := $(HYBRID_MODULE_OBJ)
+
+$(HYBRID_MODULE_OBJ): $(HYBRID_MODULE_UU)
+	mkdir -p `dirname $@`
+	uudecode -o $@ $^
+
+$(src)/wl.o: $(HYBRID_MODULE_OBJ)
