--- a/security/apparmor/Kconfig
+++ b/security/apparmor/Kconfig
@@ -51,3 +51,12 @@ config SECURITY_APPARMOR_DISABLE
 	  parameters are difficult to employ.
 
 	  If you are unsure how to answer this question, answer N.
+
+config SECURITY_APPARMOR_COMPAT_24
+	bool "Enable AppArmor 2.4 compatability"
+	depends on SECURITY_APPARMOR
+	default y
+	help
+	  This option enables compatability with AppArmor 2.4.  It is	  
+          recommended if compatability with older versions of AppArmor
+          is desired.
