--- a/security/apparmor/Makefile
+++ b/security/apparmor/Makefile
@@ -7,6 +7,7 @@ apparmor-y := apparmorfs.o audit.o capability.o context.o ipc.o lib.o match.o \
               resource.o sid.o file.o
 
 apparmor-$(CONFIG_SECURITY_APPARMOR_NETWORK) += net.o
+apparmor-$(CONFIG_SECURITY_APPARMOR_COMPAT_24) += apparmorfs-24.o
 
 clean-files: capability_names.h af_names.h
 
