AppArmor: remove option to conditionally enable networking rules
There isn't any real compeling reason to make the networking rules
an optional part of AppArmor, so remove the option and turn them
on by default.

see
http://marc.info/?l=linux-kernel&m=126687703219461&w=2

Signed-off-by: John Johansen <john.johansen@canonical.com>

--- a/security/apparmor/Kconfig
+++ b/security/apparmor/Kconfig
@@ -1,9 +1,10 @@
 config SECURITY_APPARMOR
 	bool "AppArmor support"
-	depends on SECURITY && SECURITY_NETWORK && NET && INET
+	depends on SECURITY
 	select AUDIT
 	select SECURITY_PATH
 	select SECURITYFS
+	select SECURITY_NETWORK
 	default n
 	help
 	  This enables the AppArmor security module.
@@ -12,14 +13,6 @@ config SECURITY_APPARMOR
 	  <http://forge.novell.com/modules/xfmod/project/?apparmor>
 
 	  If you are unsure how to answer this question, answer N.
-
-config SECURITY_APPARMOR_NETWORK
-       bool "AppArmor network support"
-       depends on SECURITY_APPARMOR
-       default n
-       help
-	 This enables AppArmor to mediate applications network use.
-	 This will enable the SECURITY_NETWORK hooks.
 
 config SECURITY_APPARMOR_BOOTPARAM_VALUE
 	int "AppArmor boot parameter default value"
