--- a/debian/config/i386/config
+++ b/debian/config/i386/config
@@ -1112,6 +1112,7 @@ CONFIG_HID_A4TECH=m
 CONFIG_HID_APPLE=m
 CONFIG_HID_ASUS=m
 CONFIG_HID_BELKIN=m
+CONFIG_HID_CANDO=m
 CONFIG_HID_CHERRY=m
 CONFIG_HID_CHICONY=m
 CONFIG_HID_CYPRESS=m
