--- a/debian/config/i386/config
+++ b/debian/config/i386/config
@@ -1633,6 +1633,7 @@ CONFIG_M25PXX_USE_FAST_READ=y
 CONFIG_MAC80211=y
 CONFIG_MAC80211_DEBUGFS=y
 # CONFIG_MAC80211_DEBUG_MENU is not set
+CONFIG_MAC80211_HAS_RC=y
 CONFIG_MAC80211_LEDS=y
 # CONFIG_MAC80211_MESH is not set
 CONFIG_MAC80211_RC_DEFAULT="minstrel"
