--- a/debian/config/i386/config
+++ b/debian/config/i386/config
@@ -62,7 +62,6 @@ CONFIG_AF_RXRPC=m
 CONFIG_AGP=m
 CONFIG_AGP_ALI=m
 CONFIG_AGP_AMD=m
-CONFIG_AGP_AMD64=m
 CONFIG_AGP_ATI=m
 CONFIG_AGP_EFFICEON=m
 CONFIG_AGP_INTEL=m
@@ -231,6 +230,7 @@ CONFIG_B43_LEDS=y
 CONFIG_B43_PCICORE_AUTOSELECT=y
 CONFIG_B43_PCI_AUTOSELECT=y
 CONFIG_B43_PHY_LP=y
+CONFIG_B43_PIO=y
 # CONFIG_B43_SDIO is not set
 CONFIG_B44=m
 CONFIG_B44_PCI=y
@@ -257,7 +257,7 @@ CONFIG_BATTERY_OLPC=m
 # CONFIG_BEFS_DEBUG is not set
 CONFIG_BEFS_FS=m
 CONFIG_BFS_FS=m
-CONFIG_BINARY_PRINTF=y
+# CONFIG_BINARY_PRINTF is not set
 CONFIG_BINFMT_AOUT=y
 CONFIG_BINFMT_ELF=y
 CONFIG_BINFMT_MISC=y
@@ -416,7 +416,6 @@ CONFIG_CONNECTOR=y
 CONFIG_CONSOLE_POLL=y
 CONFIG_CONSOLE_TRANSLATIONS=y
 CONFIG_CONSTRUCTORS=y
-CONFIG_CONTEXT_SWITCH_TRACER=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 # CONFIG_CPA_DEBUG is not set
 CONFIG_CPU5_WDT=m
@@ -700,7 +699,7 @@ CONFIG_DVB_ISL6421=m
 CONFIG_DVB_L64781=m
 CONFIG_DVB_LGDT3305=m
 CONFIG_DVB_LGDT330X=m
-CONFIG_DVB_LGS8GL5=m
+CONFIG_DVB_LGS8GXX=m
 CONFIG_DVB_LNBP21=m
 CONFIG_DVB_MAX_ADAPTERS=8
 CONFIG_DVB_MT312=m
@@ -826,8 +825,6 @@ CONFIG_EQUALIZER=m
 # CONFIG_ETHOC is not set
 CONFIG_EUROTECH_WDT=m
 CONFIG_EVENTFD=y
-CONFIG_EVENT_PROFILE=y
-CONFIG_EVENT_TRACING=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_EXPORTFS=m
 CONFIG_EXT2_FS=y
@@ -1274,6 +1271,7 @@ CONFIG_IGBVF=m
 CONFIG_IGB_DCA=y
 # CONFIG_IIO is not set
 # CONFIG_IKCONFIG is not set
+CONFIG_ILLEGAL_POINTER_VALUE=0
 # CONFIG_IMA is not set
 CONFIG_INET=y
 CONFIG_INET6_AH=m
@@ -1333,7 +1331,6 @@ CONFIG_INPUT_JOYDEV=m
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_INPUT_KEYBOARD=y
 CONFIG_INPUT_KEYSPAN_REMOTE=m
-CONFIG_INPUT_MIMIO=m
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_MOUSE=y
 CONFIG_INPUT_MOUSEDEV=y
@@ -1550,7 +1547,6 @@ CONFIG_JOYSTICK_XPAD=m
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_JOYSTICK_ZHENHUA=m
-CONFIG_K8_NB=y
 CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_ALL=y
 # CONFIG_KALLSYMS_EXTRA_PASS is not set
@@ -1653,6 +1649,7 @@ CONFIG_M25PXX_USE_FAST_READ=y
 CONFIG_MAC80211=y
 CONFIG_MAC80211_DEBUGFS=y
 # CONFIG_MAC80211_DEBUG_MENU is not set
+CONFIG_MAC80211_HAS_RC=y
 CONFIG_MAC80211_LEDS=y
 # CONFIG_MAC80211_MESH is not set
 CONFIG_MAC80211_RC_DEFAULT="minstrel"
@@ -2000,7 +1997,6 @@ CONFIG_NET_CLS_TCINDEX=m
 CONFIG_NET_CLS_U32=m
 CONFIG_NET_DCCPPROBE=m
 CONFIG_NET_DMA=y
-# CONFIG_NET_DROP_MONITOR is not set
 CONFIG_NET_DSA=y
 CONFIG_NET_DSA_MV88E6060=y
 CONFIG_NET_DSA_MV88E6123_61_65=y
@@ -2146,7 +2142,6 @@ CONFIG_NLS_KOI8_R=m
 CONFIG_NLS_KOI8_U=m
 CONFIG_NLS_UTF8=m
 # CONFIG_NOHIGHMEM is not set
-CONFIG_NOP_TRACER=y
 CONFIG_NOP_USB_XCEIV=m
 CONFIG_NOZOMI=m
 CONFIG_NO_HZ=y
@@ -3000,6 +2995,7 @@ CONFIG_SQUASHFS=m
 CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
 CONFIG_SSB=m
 CONFIG_SSB_B43_PCI_BRIDGE=y
+CONFIG_SSB_BLOCKIO=y
 # CONFIG_SSB_DEBUG is not set
 CONFIG_SSB_DRIVER_PCICORE=y
 CONFIG_SSB_DRIVER_PCICORE_POSSIBLE=y
@@ -3141,9 +3137,7 @@ CONFIG_TOUCHSCREEN_WM9713=y
 CONFIG_TOUCHSCREEN_WM97XX=m
 CONFIG_TPS65010=m
 # CONFIG_TR is not set
-CONFIG_TRACEPOINTS=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
-CONFIG_TRACING=y
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_TRANZPORT is not set
 # CONFIG_TREE_PREEMPT_RCU is not set
