JOLICLOUD: keucr: Imported keucr module to support the ENE card reader
https://bbs.archlinux.org/viewtopic.php?id=91798
https://bugs.launchpad.net/linux/+bug/530277
https://bugs.launchpad.net/linux/+bug/530277/+attachment/1714152/+files/keucr.tgz

Signed-off-by: Adam McDaniel <adam@jolicloud.org>

--- a/jolicloud/Kconfig
+++ b/jolicloud/Kconfig
@@ -2,6 +2,7 @@ menu "Jolicloud Supplied Third-Party Device Drivers"
 
 source "jolicloud/asus_eee/Kconfig"
 source "jolicloud/broadcom/Kconfig"
+source "jolicloud/keucr/Kconfig"
 source "jolicloud/psb/Kconfig"
 source "jolicloud/via_chrome9/Kconfig"
 source "jolicloud/rtl8192ce/Kconfig"
